--- a/styles.css
+++ b/styles.css
@@ -177,9 +177,49 @@ section {padding: 0px 0;}
     margin: 10px
 }
 
-.start {
+#start {
     height: 100vh; /* Full viewport height */
     background-image: url('images/log2.png'); /* Replace with actual path */
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white; /* Adjust text color */
+    padding: 20px;
+    position: relative;
+}
+
+.start .container {
+    position: absolute;
+    top: 20%; /* 30% from the top */
+    left: 5%; /* 10% from the left */
+    width: 30%; /* 10% from the right */
+    bottom: 30%; /* 30% from the bottom */
+    background-color: rgba(45, 79, 143, 0.7); /* Semi-transparent blue background */
+    padding: 20px;
+    box-sizing: border-box;
+    z-index: 2; /* Ensures text container is above the background */
+}
+
+.start .container h1 {
+    margin-bottom: 15px;
+    font-size: 2em;
+    color: white; /* Adjust text color */
+}
+
+.start .container p {
+    font-size: 1.2em;
+    line-height: 1.6;
+    color: white; /* Adjust text color */
+}
+
+.contact {
+    height: 100vh; /* Full viewport height */
+    /* background-image: url('images/contact.png'); Replace with actual path */
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
