--- a/styles.css
+++ b/styles.css
@@ -350,7 +350,15 @@ section {padding: 0px 0;}
     box-sizing: border-box;
     z-index: 2; /* Ensures text box is above the background */
     color: white;
-    text-align: center;
+    text-align: left;
+}
+
+#contact_tel, #contact_mail, #cariera_mail {
+    font-family: 'FoundrySterling-Light', Arial, sans-serif;
+    display: block; /* Makes them block-level elements, so they are stacked vertically */
+    margin-bottom: 10px; /* Adds some space between the links */
+    font-size: 18px;
+    color: white; /* Keeps text color white */
 }
 
 .contact .content-box h1 {
@@ -712,7 +720,7 @@ img {
     box-sizing: border-box;
     z-index: 2; /* Ensures text box is above the background */
     color: white;
-    text-align: center;
+    text-align: left;
 }
 
 .careers .content-box h1 {
@@ -1260,7 +1268,7 @@ footer {
 	font-weight: 400;
     background-color: #272727; /* Same as topbar background */
     color: white;
-    margin-top: auto;
+    padding: 10px 0; /* Adds spacing inside the footer */
     /*padding: 20px 0;
     text-align: center;
     position: relative;
@@ -1276,6 +1284,11 @@ footer {
 
 footer .footer-left {
     margin-left: 85px;
+    margin-bottom: 20px;
+    color: white;
+}
+
+footer .footer-center {
     margin-bottom: 20px;
     color: white;
 }
